# cira-diff

./: README.md  config_CorrDiff.py  environment.yml  pyproject.toml
cira_diff/: README.md  __init__.py  dataset.py  edm.py  generate.py  train.py  train_CorrDiff.py  train_Diff.py  util.py
scripts/Chase_2025/: README.md  Run_Forecasts_Chase2025.ipynb  train_edm_LDM_Chase2025.py
scripts/DDPM_Tutorial/: basic_training.ipynb
scripts/image2image_NOWCAST/: log_gpu.py  train_diffusion_model_EDM_Channel13_2inputs.py  train_diffusion_model_EDM_Channel13_2inputs_CorrDiff.py  train_diffusion_model_EDM_Channel13_2inputs_DiT.py  train_diffusion_model_EDM_Channel13_2inputs_DiT_CorrDiff.py  train_diffusion_model_latentEDM_Channel13_V2.py  train_diffusion_model_latentEDM_Channel13_V2_noisy.py  train_vanilla_TF.py  train_vanilla_latenttf.py  train_vanilla_latentunet.py  train_vanilla_unet.py
scripts/image2image_NOWCAST/logs/images/: events.out.tfevents.1723842758.d89f0686ed8d.50484.1  events.out.tfevents.1723842816.d89f0686ed8d.52356.1  events.out.tfevents.1723842859.d89f0686ed8d.54093.1  events.out.tfevents.1723842942.d89f0686ed8d.56193.1
src/: config.py  dataset.py  edm.py  train.py
src/cira-diff/: dataset.py  edm.py  util.py
