[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cira_diff"
version = "0.0.2"
authors = [
    {name = "Randy Chase", email = "randy.chase@colostate.edu"},
]
description = "A package to help implement EDM diffusion for satellite data"
readme = "README.md"
requires-python = ">=3.8"

license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/dopplerchase/cira-diff"
